Hecho todo desde el principio hasta formulario en móvil y tablet.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,121 @@
 	<meta charset="UTF-8">
 	<title>Batmusic</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="dist/css/style.css">
+	<link rel="stylesheet" href="">
 </head>
 <body>
-	<h1>Batmusic</h1>
+	<header class="web-header">
+		<h1 class="web-title">Batmusic</h1>
+	</header>
+
+	<form novalidate>
+		<label for="artist">Artist</label>
+		<input type="text" id="artist" name="artist" placeholder="Artist" required>
+
+		<label for="title">Title</label>
+		<input type="text" id="title" name="title" placeholder="Song title" required>
+
+		<label for="audio_url">Audio URL</label>
+		<input type="url" id="audio_url" name="audio_url" placeholder="http://..." required>
+
+		<label for="cover_url">Cover URL</label>
+		<input type="url" id="cover_url" name="cover_url" placeholder="http://...">
+
+		<button>Save song</button>
+	</form>
+
+	<section class="songs-list">
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		<article class="song">
+			<img class="cover" src="images/cd.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+	</section>
 </body>
 </html>
