Añadido icono para agregar canciones con transición. Añadido botón de favoritos. Añadido el hecho de obtener la lista de canciones del backend en lugar de tener una predefinida. Comprobación de posibles datos erroneos en el formulario (parsear HTML por ejemplo) Añadidos modulos para exportar (para recargar la lista de canciones despues de agregar una, por ejemplo)

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="dist/css/style.css">
 	<link rel="stylesheet" href="">
 </head>
-<body class="form-shown">
+<body class="song-list-shown">
 	<header class="web-header">
+	<img class="add-icon" src="src/img/icon-add.png" title="Add song" alt="Add Icon">
 		<h1 class="web-title">Batmusic</h1>
 	</header>
 
@@ -29,9 +30,9 @@
 	</form>
 
 	<section class="ui-element songs-list">
-		<article class="song">
+		<!--<article class="song">
 			<img class="cover" src="images/cd.jpg">
-			<div class="artist">Song artist</div>
+			<div class="artist">Song artist 1</div>
 			<div class="title">Song title</div>
 		</article>
 		<article class="song">
@@ -118,7 +119,7 @@
 			<img class="cover" src="images/cd.jpg">
 			<div class="artist">Song artist</div>
 			<div class="title">Song title</div>
-		</article>
+		</article>-->
 	</section>
 	<script src="dist/js/app.js"></script>
 </body>
