Añadimos la generacion de sprites al gulpfile y lo aplicamos.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="song-list-shown">
 	<header class="web-header">
-	<img class="add-icon" src="src/img/icon-add.png" title="Add song" alt="Add Icon">
+		<span class="sprite icon-add add-icon" title="Add song"></span>
 		<h1 class="web-title">Batmusic</h1>
 	</header>
 
