--- a/index.html
+++ b/index.html
@@ -14,18 +14,26 @@
 	</header>
 
 	<form class="ui-element new-song-form" novalidate>
-		<div><label for="artist">Artist</label>
-		<input type="text" id="artist" name="artist" placeholder="Artist" required></div>
+		<div>
+			<label for="artist">Artist</label>
+			<input type="text" id="artist" name="artist" placeholder="Artist" required>
+		</div>
 
-		<div><label for="title">Title</label>
-		<input type="text" id="title" name="title" placeholder="Song title" required></div>
+		<div>
+			<label for="title">Title</label>
+			<input type="text" id="title" name="title" placeholder="Song title" required>
+		</div>
 
-		<div><label for="audio_url">Audio URL</label>
-		<input type="file" id="audio_file" name="audio_file" accept="audio/*" required></div>
+		<div>
+			<label for="audio_file">Audio URL</label>
+			<div id="audio_file" class="drop-zone">Drop your audio file here</div>
+		</div>
 
-		<div><label for="cover_url">Cover URL (optional)</label>
-		<input type="file" id="cover_file" name="cover_file" accept="image/*"></div>
-
+		<div>
+			<label for="cover_file">Cover URL (optional)</label>
+			<div id="cover_file" class="drop-zone">Drop your cover URL file here</div>
+		</div>
+		
 		<button>Save song</button>
 	</form>
 
