Implementado Drag & Drop y validacion de los archivos arrastrados.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
 		<div>
 			<label for="audio_file">Audio URL</label>
-			<div id="audio_file" class="drop-zone">Drop your audio file here</div>
+			<div id="audio_file" class="drop-zone" filetype="audio/.+" required>Drop your audio file here</div>
 		</div>
 
 		<div>
-			<label for="cover_file">Cover URL (optional)</label>
-			<div id="cover_file" class="drop-zone">Drop your cover URL file here</div>
+			<label for="cover_file">Cover URL</label>
+			<div id="cover_file" class="drop-zone" filetype="image/.+" required>Drop your cover URL file here</div>
 		</div>
 		
 		<button>Save song</button>
